Closed Bug 1620453 Opened 4 years ago Closed 4 years ago

Properly promote unexpected plugin wmode values to direct on Windows

Categories

(Core Graveyard :: Plug-ins, defect, P1)

Unspecified
Windows
defect

Tracking

(firefox76 fixed)

RESOLVED FIXED
mozilla76
Tracking Status
firefox76 --- fixed

People

(Reporter: handyman, Assigned: handyman)

References

Details

Attachments

(1 file)

The only wmode values that we should send to Flash Player (on Windows) are "direct", "opaque" and "transparent". Any other values are either out of date or illegal. In particular, we want "window" and "gpu" modes (as well as any unexpected values such as "default" or "foo") to be promoted to "direct" by Firefox. We handle "window" and "gpu" correctly, but not the rest. This bug is to change ForceDirect [1] to fix that.

[1] https://searchfox.org/mozilla-central/rev/13b081a62d3f3e3e3120f95564529257b0bf451c/dom/plugins/ipc/PluginModuleParent.cpp#2065

See Also: → 1608028

This code always intended to force wmode to be one of these modes (bug 1340276) but was not robust to unexpected wmode values (e.g. "default"). Unexpected values are now promoted to "direct".

The wmode behavior is explained here: https://wiki.mozilla.org/Plugins/Async_Drawing#Windows

Aaron, review ping

Flags: needinfo?(aklotz)
Flags: needinfo?(aklotz)

David can this land?

Flags: needinfo?(davidp99)

Yup. Thanks for the reminder.

Flags: needinfo?(davidp99)
Pushed by daparks@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/de94a3c40ad2
Force Windows plugin wmode to be direct, opaque or transparent r=aklotz
Status: NEW → RESOLVED
Closed: 4 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla76
Product: Core → Core Graveyard
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: