Bug 1620453: Force Windows plugin wmode to be direct, opaque or transparent r=aklotz

This code always intended to force wmode to be one of these modes (bug 1340276) but was not robust to unexpected wmode values (e.g. "default").  Unexpected values are now promoted to "direct".

Differential Revision: https://phabricator.services.mozilla.com/D66477